public/assets/css/input.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
    a:not(header > a):not(h2 > a):not(h3 > a):not(h4 > a) {
        @apply text-[#3366FF];
    }

    a {
        @apply underline;
    }

    a:hover {
        @apply transition duration-300 ease-in-out text-[#3399FF];
    }

    h1 > a,
    h2 > a,
    h3 > a,
    h4 > a {
        @apply text-[#ffffff] no-underline font-bold;
    }

    h1,
    h2,
    h3,
    h4 {
        @apply text-[#ffffff] no-underline;
    }

    h2 {
        @apply my-8 text-lg lg:text-2xl;
    }

    p {
        @apply my-2;
    }

    strong,
    em:not(h2 em):not(figcaption em),
    li::marker {
        @apply text-[#3399FF];
    }

    pre,
    blockquote,
    aside {
        @apply my-3 rounded;
    }

    pre {
        @apply bg-[#222222];
    }

    blockquote,
    aside {
        @apply bg-[#000033];
    }

    code:not(pre > code) {
        @apply bg-[#222222] font-monospace;
    }

    code {
        @apply overflow-x-auto whitespace-pre-wrap break-words;
        font-family: 'JetBrainsMono', monospace;
    }

    blockquote,
    aside {
        @apply border-l-4 border-solid border-[#3366FF] p-4 text-[#ffffff];
    }

    blockquote {
        @apply italic;
    }

    ul {
        @apply list-disc;
    }

    ol {
        @apply list-decimal;
    }

    ul,
    ol {
        @apply pl-4 list-inside;
    }

    li::marker {
        @apply font-bold;
    }

    figure {
        @apply my-8;
    }

    img {
        @apply max-w-[520px] mx-auto w-full block rounded-sm h-auto md:w-1/2;
    }

    figcaption {
        @apply text-[#999999] text-center text-sm;
    }

    sup {
        @apply text-base;
        vertical-align: baseline;
        position: relative;
        top: 0;
        margin-left: 0.2em;
    }

    sup > a:before {
        content: "[";
    }

    sup > a:after {
        content: "]";
    }

    ruby {
        display: ruby;
    }

    /* Firefox-specific adjustment */
    @-moz-document url-prefix() {
        rt {
            position: relative;
            top: 1em;
            margin-left: -2em;
        }
    }
}

/*a:hover {*/
/*    text-shadow: 0 0 24px;*/
/*}*/

.blockquote figcaption {
    text-align: right;
}

.blockquote figcaption:before {
    content:"\2014"
}

.footnote-backref,
.reference-backref,
.reference-ref {
    text-decoration: none;
}

/* Stupid Parsedown inserts a <p> in each <li> the footnotes section. */
.footnotes p {
    display: inline;
}

/* Stupid Parsedown inserts a <hr> the footnotes section. */
.footnotes hr {
    display: none;
}

.footnotes ol li {
    margin-bottom: 1rem;
}

@font-face {
    font-family: 'HanSerif';
    src:  url('/assets/fonts/HanSerif-Regular.otf') format('opentype');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'JetBrainsMono';
    src:  url('/assets/fonts/JetBrainsMono-Medium.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'JetBrainsMono';
    src:  url('/assets/fonts/JetBrainsMono-MediumItalic.ttf') format('truetype');
    font-weight: normal;
    font-style: italic;
}

/* Loading github-dark.min.css directly here to more easily re-use colors, etc. */
pre code.hljs {display:block;overflow-x:auto;padding:.5rem}code.hljs{padding:0}
.hljs{color:#c9d1d9;}.hljs-doctag,.hljs-keyword,.hljs-meta .hljs-keyword,.hljs-template-tag,.hljs-template-variable,.hljs-type,.hljs-variable.language_{color:#ff7b72}.hljs-title,.hljs-title.class_,.hljs-title.class_.inherited__,.hljs-title.function_{color:#d2a8ff}.hljs-attr,.hljs-attribute,.hljs-literal,.hljs-meta,.hljs-number,.hljs-operator,.hljs-selector-attr,.hljs-selector-class,.hljs-selector-id,.hljs-variable{color:#79c0ff}.hljs-meta .hljs-string,.hljs-regexp,.hljs-string{color:#a5d6ff}.hljs-built_in,.hljs-symbol{color:#ffa657}.hljs-code,.hljs-comment,.hljs-formula{color:#8b949e}.hljs-name,.hljs-quote,.hljs-selector-pseudo,.hljs-selector-tag{color:#7ee787}.hljs-subst{color:#c9d1d9}.hljs-section{color:#1f6feb;font-weight:700}.hljs-bullet{color:#f2cc60}.hljs-emphasis{color:#c9d1d9;font-style:italic}.hljs-strong{color:#c9d1d9;font-weight:700}.hljs-addition{color:#aff5b4;background-color:#033a16}.hljs-deletion{color:#ffdcd7;background-color:#67060c}

